# recognition-bool-functions

./: .gitignore  AUTHORS  CMakeLists.txt  Doxyfile.in  README.md
doxy_style/: footer.html  header.html
images/: CMakeLists.txt
include/bfr/: Clause.hpp
pylpb/: __init__.py  lpb.py  lpb_comb.py  lpb_test.py  test_lpb.py  test_lpb_comb.py
src/: BFRMain.cpp  Clause.cpp
tests/: CMakeLists.txt
